# openvk-api

./: .gitignore  LICENSE  ReadMe.md  pyproject.toml
.github/: dependabot.yml
openvk_api/: __init__.py  base_client.py  consts.py  exceptions.py
