[tool.poetry]
name = "openvk-api"
version = "0.0.2"
description = ""
authors = ["NoPlagiarism <37241775+NoPlagiarism@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
