[tool.poetry]
name = "openvk-api"
version = "0.0.2a"
description = "openvk api based on httpx"
authors = ["NoPlagiarism <37241775+NoPlagiarism@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/NoPlagiarism/openvk-api"
readme = "ReadMe.md"
keywords = ["openvk", "httpx"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
